# OctoPrint-XboxController

./: MANIFEST.in  README.md  setup.cfg  setup.py
octoprint_xbox_controller/: __init__.py  init__.py
octoprint_xbox_controller/static/css/: xbox_controller.css
octoprint_xbox_controller/static/js/: xbox_controller.js
octoprint_xbox_controller/templates/: xbox_controller_navbar.jinja2  xbox_controller_settings.jinja2  xbox_controller_tab.jinja2
