[metadata]
name = OctoPrint-XboxController
version = 0.1.0
description = Ein OctoPrint Plugin zur Steuerung des 3D-Druckers mit einem Xbox-Controller.
long_description = file: README.md
long_description_content_type = text/markdown
author = Dein Name
author_email = dein.email@example.com
url = https://github.com/deinusername/OctoPrint-XboxController
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    octoprint>=1.3.0
    xbox360controller

[options.entry_points]
octoprint.plugin =
    octoprint_xbox_controller = octoprint_xbox_controller
